--- a/navbar.css
+++ b/navbar.css
@@ -1,11 +1,11 @@
 .navbar {
     overflow: hidden;
-    background-color: rgb(255, 0, 0);
+    background-color: #101357;
 }
 
 .navbar a {
     float: left;
-    font-size: 16px;
+    font-size: 18px;
     color: rgb(255, 255, 255);
     text-align: center;
     padding: 14px 16px;
@@ -18,19 +18,19 @@
 }
 
 .dropdown .dropbtn {
-    font-size: 16px;
+    font-size: 18px;
     border: none;
     outline: none;
-    color: white;
+    color: rgb(255, 255, 255);
     padding: 14px 16px;
-    background-color: inherit;
+    background-color: #101357;
     font-family: inherit;
     margin: 0;
 }
 
 .navbar a:hover,
 .dropdown:hover .dropbtn {
-    background-color: rgb(0, 255, 0);
+    background-color: #00a0a0;
 }
 
 .dropdown-content {
@@ -52,7 +52,7 @@
 }
 
 .dropdown-content a:hover {
-    background-color: rgb(0, 0, 255);
+    background-color: #00a0a0;
 }
 
 .dropdown:hover .dropdown-content {
