--- a/styling.css
+++ b/styling.css
@@ -12,10 +12,9 @@ p {
     font-size: 18px;
 }
 
-.center {
+.centerimg {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 40%;
-  }
-  
+    width: 20%;
+}
